Fixed misalignment of page contents

--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ html, body {
 
 #container {
   min-height: 100%;
-  position: absolute;
+  position: relative;
   top: 0;
   left: 0;
 }
@@ -20,6 +20,7 @@ html, body {
   width: 100%;
   height: 100%;
   background: black;
+  opacity: 0;
 }
 
 #banner {
